@@ -4,18 +4,18 @@
 #include "Evas_GL.h"
 
 typedef void *EVGLNative_Display;
+typedef void *EVGLNative_Window;
 typedef void *EVGLNative_Surface;
 typedef void *EVGLNative_Context;
 typedef struct _EVGL_Engine         EVGL_Engine;
 typedef struct _EVGL_Interface      EVGL_Interface;
 typedef struct _EVGL_Surface        EVGL_Surface;
-typedef struct _EVGL_Native_Surface EVGL_Native_Surface;
+typedef struct _EVGL_Native_Window  EVGL_Native_Window;
 typedef struct _EVGL_Context        EVGL_Context;
 typedef struct _EVGL_Resource       EVGL_Resource;
 typedef struct _EVGL_Cap            EVGL_Cap;
 typedef struct _EVGL_Surface_Cap    EVGL_Surface_Cap;
 typedef struct _EVGL_Surface_Format EVGL_Surface_Format;
-typedef struct _Native_Surface      Native_Surface;
 
 
 extern EVGL_Engine *evgl_engine_create(EVGL_Interface *efunc, void *engine_data);
