@@ -1,3 +1,10 @@
+2013-03-04  Sung W. Park (sung_)
+
+        * Evas Evas_GL: removed resource surface/context pool in favor of
+        creating on-demand. resource surface/contexts are used for creating
+        GL resources for Evas_GL.
+        
+
 2013-02-28  Tom Hacohen (TAsn)
 
         * Evas textblock: Added proper size adjustments for
@@ -5,8 +12,8 @@
 
 2013-02-28  Mike Blumenkrantz
 
-    * fix custom states for edje SPACER parts    
-    * fix edje program filters
+        * fix custom states for edje SPACER parts    
+        * fix edje program filters
 
 2013-02-28  Cedric Bail
 
